Fixes #828: Dashboard widget getting aligned to center with alone

--- a/layouts/v7/skins/vtiger/style.less
+++ b/layouts/v7/skins/vtiger/style.less
@@ -5306,7 +5306,7 @@ li.dashboardWidget {
 }
 
 .dashBoardContainer .tabContainer ul{
-    margin:0 auto;
+    margin:0 inherit;
 }
 
 .dashBoardContainer .tabContainer .nav{
